--- a/frontend/Cleaning-of-dataset.ipynb
+++ b/frontend/Cleaning-of-dataset.ipynb
@@ -18,17 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Oct19 = pd.read_csv(\"2019-Oct.csv\",nrows=5)\n",
-    "\n",
-    "\n",
-    "# Datalist = [\n",
-    "# Oct19,Nov19,Dec19,Jan20,Feb20,Mar20,Apr20\n",
-    "# ]\n",
-    "\n",
-    "\n",
-    "# Oct19 = Oct19.drop(columns=[\"product_id\",\"category_id\",\"user_id\",\"user_session\"]).dropna()\n",
-    "# compression_opts = dict(method='zip',archive_name='out.csv')  \n",
-    "# Oct19.to_csv('Oct19.zip', index=False,compression=compression_opts)  "
+    "#####################################\n",
+    "#             Python Team4          #\n",
+    "#          Zi bin and Zexi          #\n",
+    "#####################################"
    ]
   },
   {
@@ -137,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit (microsoft store)",
+   "display_name": "Python 3.10.1 ('frontend-i7DoNlLk')",
    "language": "python",
    "name": "python3"
   },
@@ -151,11 +144,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "dc4bf2949bb6c6d29a0bd28f1c47ed5c4e4061ea257ab0e80d618c62a9f40c18"
+    "hash": "e4a63a9cedfbbe8d651c213496893d2c72965d9a18c37fe4f5619cf0d0a27468"
    }
   }
  },
